Updated Lesson10-14 - updated archive HW14, added task in PT11-12, changed lines 75 and 112 in main.py.

--- a/Урок 10-14. Операторы ветвлений/Python - PT11-12.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT11-12.html
@@ -279,6 +279,18 @@
       </div>
       <div class="right-rect">
         <h2>Практическое Задание 11.10</h2>
+        <p>Что произойдёт в коде ниже при запуске программы?</p>
+        <h3>Код:</h3>
+        <div class="console">
+          <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="none" viewBox="0 0 24 24" class="icon-sm">
+              <path fill="currentColor" fill-rule="evenodd" d="M7 5a3 3 0 0 1 3-3h9a3 3 0 0 1 3 3v9a3 3 0 0 1-3 3h-2v2a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-9a3 3 0 0 1 3-3h2zm2 2h5a3 3 0 0 1 3 3v5h2a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1h-9a1 1 0 0 0-1 1zM5 9a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1z" clip-rule="evenodd"></path>
+            </svg>
+            Copy code</button>
+          <pre><code class="python">print(True or False and False and False)</code></pre>
+        </div>
+      </div>
+      <div class="right-rect">
+        <h2>Практическое Задание 11.11</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли возраст</span> и <span class="hl-text">выводит в консоль возрастную группу</span>.</p>
         <p>Группы следующие:
           <br>— <span class="hl-text"><b>Детство</b></span>: до <code><span class="number"><b>13</b></span></code> включительно.
@@ -294,7 +306,7 @@
         </div>
       </div>
       <div class="right-rect">
-        <h2>Практическое Задание 11.11</h2>
+        <h2>Практическое Задание 11.12</h2>
         <p><span class="hl-text">Teston Lebra</span> поручили сделать прототип входа в программу по логину и паролю. Программа должна выводить в консоль <code><span class="string"><b>"Вход выполнен успешно."</b></span></code>, если логин - <code><span class="string"><b>"admin"</b></span></code>, а пароль - <code><span class="string"><b>"5869"</b></span></code>, а в противном случае <code><span class="string"><b>"Неверный логин или пароль."</b></span></code>. Напишите программу, которая <span class="hl-text">запрашивает с консоли логин</span> и <span class="hl-text">пароль</span>, а затем <span class="hl-text">выводит в консоль ответ</span>.</p>
         <h3>Консоль:</h3>
         <div class="console">
@@ -305,7 +317,7 @@
         </div>
       </div>
       <div class="right-rect">
-        <h2>Практическое Задание 11.12</h2>
+        <h2>Практическое Задание 11.13</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает с консоли вес в килограммах</span> и <span class="hl-text">рост в метрах</span>, затем <span class="hl-text">выводит в консоль индекс массы тела (ИМТ)</span> и <span class="hl-text">категорию здоровья</span>. ИМТ вычисляется как отношение массы тела в килограммах к квадрату роста в метрах.</p>
         <p>Категории уровня здоровья:
           <br>— <span class="hl-text"><b>Недостаточный вес:</b></span> ИМТ менее <code><span class="number"><b>18.5</b></span></code>.
@@ -325,7 +337,7 @@
         </div>
       </div>
       <div class="right-rect">
-        <h2>Практическое Задание 11.13</h2>
+        <h2>Практическое Задание 11.14</h2>
         <p>Напишите программу, которая <span class="hl-text">запрашивает символ с консоли</span> и <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"Клавиша отвечает за движение."</b></span></code>, если ввели символ <code><span class="string"><b>"W"</b></span></code>, <code><span class="string"><b>"A"</b></span></code>, <code><span class="string"><b>"S"</b></span></code> или <code><span class="string"><b>"D"</b></span></code>, и <code><span class="string"><b>"Другая команда."</b></span></code> в противном случае.</p>
         <h3>Консоль:</h3>
         <div class="console">
@@ -335,7 +347,7 @@
         </div>
       </div>
       <div class="right-rect">
-        <h2>Практическое Задание 11.14</h2>
+        <h2>Практическое Задание 11.15</h2>
         <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> началась акция для клиентов. Если клиент является участником программы лояльности, то ему выдаётся скидка на покупку.</p>
         <p>Скидка расчитывается следующим образом:
           <br>— Стоимость корзины от <code><span class="number"><b>50</b></span></code> до <code><span class="number"><b>100</b></span></code> - скидка <code><span class="number"><b>5%</b></span></code>.
@@ -353,7 +365,7 @@
         </div>
       </div>
       <div class="right-rect">
-        <h2>Практическое Задание 11.15</h2>
+        <h2>Практическое Задание 11.16</h2>
         <p>В офис <span class="hl-text">Teston Lebra</span> поставили необычную камеру <code><span class="number"><b>360</b></span></code> - она видит область только от <code><span class="number"><b>0</b></span></code> до <code><span class="number"><b>90</b></span></code>, от <code><span class="number"><b>135</b></span></code> до <code><span class="number"><b>180</b></span></code> и от <span class="number"><b>225</b></span></code> до <code><span class="number"><b>360</b></span></code> градусов. Напишите программу, которая <span class="hl-text">запрашивает с консоли угол в градусах</span> и <span class="hl-text">выводит в консоль</span> <code><span class="string"><b>"В области видимости."</b></span></code> или <code><span class="string"><b>"Вне области видимости."</b></span></code> в зависимости от угла.</p>
         <h3>Консоль:</h3>
         <div class="console">
@@ -363,7 +375,7 @@
         </div>
       </div>
       <div class="right-rect">
-        <h2>Практическое Задание 11.16</h2>
+        <h2>Практическое Задание 11.17</h2>
         <p><span class="hl-text">Teston Lebra</span> поручили написать прототип программы системы контроля доступа в научную лабораторию. Доступ в лабораторию разрешён только квалифицированным сотрудникам, имеющим специальное разрешение, и в определённые часы.</p>
         <p>Условия для доступа следующие:
           <br>— Сотрудник должен <span class="hl-text">иметь специальное разрешение</span> или быть сотрудником с уровнем доступа <span class="hl-text">выше</span> <code><span class="number"><b>3</b></span></code>.
