Updated HW08 - changed code Homework 8.3.

--- a/Урок 07-09. Введение в Python/Python - HW08.html
+++ b/Урок 07-09. Введение в Python/Python - HW08.html
@@ -237,11 +237,11 @@ to be</code></pre>
         <h3>Консоль:</h3>
         <div class="console">
           <pre><code>Введите сумму для конвертации: <span class="input">100</span>
-Введите исходную валюту (например, USD): <span class="input">USD</span>
-Введите целевую валюту (например, EUR): <span class="input">EUR</span>
-Введите курс конверсии (сколько EUR за 1 USD): <span class="input">0.92</span>
+Введите исходную валюту: <span class="input">USD</span>
+Введите целевую валюту: <span class="input">EUR</span>
+Введите курс конверсии: <span class="input">0.92</span>
 
-Результат: 92.0 EUR</code></pre>
+100 USD = 92.0 EUR</code></pre>
         </div>
       </div>
       <div class="right-rect">
