Updated PT13 - clarifications added to task 13.3.

--- a/Урок 10-14. Операторы ветвлений/Python - PT13.html
+++ b/Урок 10-14. Операторы ветвлений/Python - PT13.html
@@ -221,10 +221,10 @@
         <p>В магазине <span class="hl-text">"Всё Не Дорого"</span> решили сделать акцию <span class="hl-text">"Накопи скидку"</span> для своих клиентов. Если клиент выполняет определённые условия, то он получает скидку.</p>
         <p>Условия следующие:
           <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>7</b></span></code> <span class="hl-text">дней подряд</span>, то получает скидку <code><span class="number"><b>2%</b></span></code>.
-          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>14</b></span></code> <span class="hl-text">дней подряд</span>, то получает скидку <code><span class="number"><b>3%</b></span></code>.
-          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>21</b></span></code> <span class="hl-text">день подряд</span>, то получает скидку <code><span class="number"><b>5%</b></span></code>.
-          <br>— Если стоимость корзины клиента от <span class="number"><b>1000</b></span> <span class="hl-text">и больше</span>, то получает скидку <span class="number"><b>10%</b></span>.
-          <br>— Если клиент оставил <span class="hl-text">положительный отзыв</span> в текущем месяце, то получает скидку <span class="number"><b>5%</b></span>.
+          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>14</b></span></code> <span class="hl-text">дней подряд</span>, то получает ещё скидку <code><span class="number"><b>3%</b></span></code>.
+          <br>— Если клиент закупался в магазине на протяжении <code><span class="number"><b>21</b></span></code> <span class="hl-text">день подряд</span>, то получает ещё скидку <code><span class="number"><b>5%</b></span></code>.
+          <br>— Если стоимость корзины клиента от <span class="number"><b>1000</b></span> <span class="hl-text">и больше</span>, то получает ещё скидку <span class="number"><b>10%</b></span>.
+          <br>— Если клиент оставил <span class="hl-text">положительный отзыв</span> в текущем месяце, то получает ещё скидку <span class="number"><b>5%</b></span>.
         </p>
         <p>Скидка действует только для следующей покупки и только с подтверждения клиентом.</p>
         <br>
